secretspec-derive/tests/ui/windows/invalid_toml.stderr
error: Failed to parse TOML: I/O error: Failed to resolve path $WORKSPACE/target/tests/trybuild/secretspec-derive/invalid_toml.txt: The system cannot find the file specified. (os error 2)
 --> tests/ui/windows/invalid_toml.rs:4:1
  |
4 | declare_secrets!("invalid_toml.txt");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `declare_secrets` (in Nightly builds, run with -Z macro-backtrace for more info)
